[package]
name = "PlayBridge-adb"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
open = "*"
spin_sleep = "*"
chrono = "*"
windows = {version = "*", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"]}
winrt-toast = "0.1.1"
winreg = "*"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
